--- a/css/master.css
+++ b/css/master.css
@@ -1,3 +1,119 @@
+/* normalize */
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+article,
+footer,
+header,
+nav,
+section {
+  display: block;
+}
+
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+a:active,
+a:hover {
+  outline-width: 0;
+}
+
+b,
+strong {
+  font-weight: inherit;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+small {
+  font-size: 80%;
+}
+
+img {
+  border-style: none;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[hidden] {
+  display: none;
+}
+
+
+/* main */
 @font-face {
   font-family: 'Circular';
   font-style: normal;
@@ -8,7 +124,6 @@
 
 a,
 a:hover,
-a:focus,
 a:active {
   text-decoration: none;
   color: #fff;
@@ -72,16 +187,16 @@ body {
 }
 
 .article footer .read-more {
-  display: inline-block;
-  padding: 0px 45px;
-  line-height: 46px;
-  border-radius: 23px;
-  border: 1px solid #fff;
-  text-decoration: none;
+  padding: 0px 35px;
   font-size: 14px;
   font-weight: bold;
   color: #fff;
-  transition: background 0.3s;
+  line-height: 35px;
+  border: 1px solid #fff;
+  border-radius: 20px;
+  transition: background 300ms;
+  display: inline-block;
+  cursor: pointer;
 }
 
 .article footer .read-more:hover {
@@ -194,6 +309,7 @@ body {
 .options .form-group label {
   font-family: 'Circular', serif;
   font-weight: bold;
+  vertical-align: middle;
   cursor: pointer;
 }
 
@@ -209,11 +325,23 @@ body {
 }
 
 .options .form-group input[type=checkbox]:checked + span:after {
-  content: '👍🏻';
+  content: '';
+  width: 22px;
+  height: 22px;
+  background: url('../img/thumbs-up.png');
+  background-repeat: no-repeat;
+  background-size: 22px 22px;
+  display: inline-block;
 }
 
 .options .form-group label span:after {
-  content: '👎🏻';
+  content: '';
+  width: 22px;
+  height: 22px;
+  background: url('../img/thumbs-down.png');
+  background-repeat: no-repeat;
+  background-size: 22px 22px;
+  display: inline-block;
 }
 
 .band {
